--- a/smartHome/app/src/main/res/values/strings.xml
+++ b/smartHome/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">SmartHomeJava</string>
+    <string name="app_name">My SmartHouse IoT8</string>
 </resources>
